--- a/store.css
+++ b/store.css
@@ -83,7 +83,7 @@ img {
   position: absolute;
   top: 140px;
   left: 10%;
-  background-image:url(billeder/gradient3.png);
+  background-image:url(images/gradient3.png);
   background-size: cover;
   background-color: #ff0000;
 }
@@ -93,7 +93,7 @@ img {
   position: absolute;
   top: 140px;
   right: 10%;
-  background-image:url(billeder/gradient4.png);
+  background-image:url(images/gradient4.png);
   background-size: cover;
   background-color: #ff0000;
 }
