--- a/about.css
+++ b/about.css
@@ -83,7 +83,7 @@ img {
   position: absolute;
   top: 140px;
   left: 70px;
-  background-image:url(billeder/gradient5.png);
+  background-image:url(images/gradient5.png);
   background-size: cover;
   background-color: #ff0000;
 }
