--- a/index.css
+++ b/index.css
@@ -79,7 +79,7 @@ img {
 }
 .div4 {
   width:100%;
-  height: 500px;
+  height: 100%;
   position: absolute;
   top: 70px;
   background-image:url(images/gradient1.png);
