--- a/store.css
+++ b/store.css
@@ -16,7 +16,7 @@ body {
 .div1 {
   width:100%;
   height: 70px;
-  background-color: #222222;
+  background-color: #ffffff;
   position: fixed;
   z-index: +1
 }
@@ -27,8 +27,8 @@ body {
 }
 .div3 {
   width:100%;
-  height: 1000px;
-  background-color: #333333;
+  height: 100%;
+  background-color: #ffffff;
   position: absolute;
   top: 70px;
 }
@@ -54,7 +54,7 @@ body {
 a.home:link, .idk:link, .about:link,
 .home:visited, .idk:visited, .about:visited {
   text-decoration: none;
-  color: #e0dbd1
+  color: #000000
 }
 a.home:hover, .idk:hover, .about:hover {
   text-decoration: none;
@@ -64,7 +64,7 @@ a.home:active, .idk:active, .about:active {
 }
 a.store:link, .store:visited {
   text-decoration: underline;
-  color: #e0dbd1;
+  color: #000000;
 }
 a.store:hover {
   text-decoration: underline;
@@ -85,7 +85,7 @@ img {
   left: 10%;
   background-image:url(images/gradient3.png);
   background-size: cover;
-  background-color: #ff0000;
+  background-color: #00000022;
 }
 .div5 {
   width:35%;
@@ -95,7 +95,7 @@ img {
   right: 10%;
   background-image:url(images/gradient4.png);
   background-size: cover;
-  background-color: #ff0000;
+  background-color: #00000022;
 }
 .div6 {
   width:35%;
@@ -117,5 +117,5 @@ img {
   text-align: justify;
   font-family: Suisse;
   font-size: 0.8em;
-  color: #e0dbd1;
+  color: #000000;
 }
