--- a/idk.css
+++ b/idk.css
@@ -16,7 +16,7 @@ body {
 .div1 {
   width:100%;
   height: 70px;
-  background-color: #222222;
+  background-color: #ffffff;
   position: fixed;
   z-index: +1
 }
@@ -27,8 +27,8 @@ body {
 }
 .div3 {
   width:100%;
-  height: 1000px;
-  background-color: #333333;
+  height: 100%;
+  background-color: #ffffff;
   position: absolute;
   top: 70px;
 }
@@ -54,7 +54,7 @@ body {
 a.home:link, .store:link, .about:link,
 .home:visited, .store:visited, .about:visited {
   text-decoration: none;
-  color: #e0dbd1
+  color: #000000
 }
 a.home:hover, .store:hover, .about:hover {
   text-decoration: none;
@@ -64,7 +64,7 @@ a.home:active, .store:active, .about:active {
 }
 a.idk:link, .idk:visited {
   text-decoration: underline;
-  color: #e0dbd1;
+  color: #000000;
 }
 a.idk:hover {
   text-decoration: underline;
@@ -84,7 +84,7 @@ img {
   top: 70px;
   background-image:url(images/gradient2.png);
   background-size: cover;
-  background-color: #ff0000;
+  background-color: #00000022;
 }
 .div5 {
   width:50%;
@@ -102,7 +102,7 @@ img {
 a.text1:link, .text1:visited {
   text-align: center;
   text-decoration: none;
-  color: #e0dbd1
+  color: #000000
 }
 a.text1:hover {
   text-decoration: none;
